@@ -13,3 +13,4 @@ t/muarg.t
 t/mult.t
 t/simple.t
 t/stdouterr.t
+t/wait.t
